Closed
Bug 567627
Opened 15 years ago
Closed 15 years ago
fix strict-aliasing violation in jsgc
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: luke, Assigned: luke)
Details
(Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
|
2.21 KB,
patch
|
igor
:
review+
|
Details | Diff | Splinter Review |
The attached patch fixes a strict-aliasing violation in jsgc that was causing crashes with the fat values patch. Ironically, for all the trouble we've been having with false positives, gcc failed to warn about this fairly obvious one.
Attachment #446944 -
Flags: review?(igor)
Updated•15 years ago
|
Attachment #446944 -
Flags: review?(igor) → review+
| Assignee | ||
Comment 1•15 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Comment 2•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•