Bug 567627 - fix strict-aliasing violation in jsgc (r=igor)